--- a/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
@@ -3,7 +3,7 @@
 // Vertical Rythmn Controls
 // ==========================================================================
 :root {
-    --baseline: 1.4;
+    --baseline: 1;
     line-height: var(--baseline)
 }
 
@@ -14,7 +14,7 @@
 // }
 //function to caculate responsive vertical rhythm units (rvr)
 @function rvr($multiple) {
-    @return calc(var(--baseline) * $multiple * 1rem);
+    @return calc(var(--baseline) * $multiple * .5rem);
 }
 
 
