--- a/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
@@ -4,10 +4,10 @@
 
 // These values are the minimum and maximum viewport sizes to apply the font scaling
 $min_width:                 300;
-$max_width:                 40000;
+$max_width:                 20000;
 // These values represent the range of font-size to apply
 // These values effect the base font-size, headings and other elements will scale proportionally
-$min_font:                 8;
+$min_font:                 16;
 $max_font:                  60; 
 
 :root { font-size: #{$min_font}px; }
@@ -40,7 +40,7 @@ $max_font:                  60;
 // ==========================================================================
 // Modular Scale-Sass Controls
 // ==========================================================================
-$modularscale: (base: .5rem, ratio: 1.5);
+// $modularscale: (base: .5rem, ratio: 1.5);
 
 
 // $modularscale: (
@@ -52,21 +52,52 @@ $modularscale: (base: .5rem, ratio: 1.5);
 //     ),
 //   576px: (  
 //     base: 1rem,
-//     ratio: 1.3,
+//     ratio: 1.5,
 //   ),
 //   768px: (
-//     base: 1.25rem,
-//     ratio: 1.3,
+//     base: 1rem,
+//     ratio: 1.5,
 //   ),
 //   992px: (
 //     base: 1rem,
-//     ratio: 1.3,
+//     ratio: 1.5,
 //   ),
 //   1200px: (
-//     base: .5rem,
-//     ratio: 1.3,
+//     base: 1rem,
+//     ratio: 1,
 //   ),
 // );
+
+
+$modularscale: (
+  base: .25rem,
+  ratio: 1.5,
+  // 320px
+  20rem: (
+    base: .5rem,
+    ratio: 1.5,
+    ),
+  // 756px
+  36rem: (  
+    base: .5rem,
+    ratio: 1.5,
+  ),
+  // 768px
+  48rem: (
+    base: .5rem,
+    ratio: 1.5,
+  ),
+  // 992px
+  62rem: (
+    base: .5rem,
+    ratio: 1.5,
+  ),
+  // 1200px
+  75rem: (
+    base: .5rem,
+    ratio: 1.5,
+  ),
+);
 
 // ==========================================================================
 // Modular Scale Variables
