--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/layout_tweaks.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/layout_tweaks.scss
@@ -2,7 +2,6 @@
 
 $w1200: 1200px;
 
-
 .wrapper {
     padding: 0;
 }
@@ -34,12 +33,12 @@ $w1200: 1200px;
     a.link__advance--chevron {
         margin-top: $rvr-6;
 
-        @media (min-width: 786px) {
+        @media (min-width: 768px) {
             margin: $rvr-8 auto;
         }
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 768px) {
         width: 300px;
     }
 }
@@ -100,7 +99,7 @@ $w1200: 1200px;
     }
 }
 
-@media (min-width: 786px) {
+@media (min-width: 768px) {
     .my-value .container {
         padding-left: 0;
         padding-right: 0;
@@ -108,7 +107,9 @@ $w1200: 1200px;
 }
 
 .business-value {
-    @media (min-width: 786px) {
+    
+
+    @media (min-width: 768px) {
         .row {
             width: 100%;
             max-width: 100%;
@@ -140,7 +141,9 @@ $w1200: 1200px;
 
                 padding-left: 0px;
                 padding-right: 0px;
-                font-size: ms(8);
+
+                // font-size: ms(8);
+           
             }
 
             h3 {
@@ -149,7 +152,8 @@ $w1200: 1200px;
 
                 padding-left: 10px;
                 padding-right: 0px;
-                font-size: ms(4.5);
+
+                // font-size: ms(4.5);
                 line-height: $rvr-2_25;
             }
 
@@ -165,7 +169,8 @@ $w1200: 1200px;
                 padding-right: 0px;
                 margin: 0;
                 text-transform: uppercase;
-                font-size: ms(3.1);
+
+                // font-size: ms(3.1);
                 letter-spacing: -.05rem;
                 line-height: $rvr-2;
 
@@ -242,7 +247,7 @@ $w1200: 1200px;
 
         h1 {
             margin-bottom: $rvr-8;
-            }
+        }
 
         .page__header {
             h2 {
@@ -285,69 +290,76 @@ $w1200: 1200px;
             padding-right: 0px;
             text-align: center;
         }
-}
-     @media (min-width: 1200px) {
-            .page__header {
-                h2 {
-                    font-size: ms(9);
-                    width: 40%;
-                    max-width: 40%;
-                    margin-bottom: $rvr-_25;
-                }
+    }
 
-                h3 {
-                    font-size: ms(6);
-                    width: 60%;
-                    max-width: 60%;
-                    margin-bottom: $rvr-_25;
-                    padding-left: ms(4);
-                    padding-right: ms(4);
-                    font-size: ms(5.3);
-                    line-height: $rvr-3_5;
-                }
-
-                h4 {
-                    font-size: ms(4.5);
-                    line-height: $rvr-3;
-                }
+    @media (min-width: 1200px) {
+        .page__header {
+            h2 {
+                font-size: ms(9);
+                width: 40%;
+                max-width: 40%;
+                margin-bottom: $rvr-_25;
             }
 
-        figure.diagram {
-                .diagram-content {
-                    margin-left: ms(2);
+            h3 {
+                font-size: ms(6);
+                width: 60%;
+                max-width: 60%;
+                margin-bottom: $rvr-_25;
+                padding-left: ms(4);
+                padding-right: ms(4);
+                font-size: ms(5.3);
+                line-height: $rvr-3_5;
+            }
 
-                    ol {
-                        padding-right: 0;
-                        padding-left: ms(6.75);
-                    }
-
-                    li {
-                        font-size: ms(4.5);
-                    }
-                }
-
-                .diagram-content > img {
-                    max-width: 100%;
-                    width: 100%;
-                }
-
-                .competitive-advantage__svg {
-                    width: 95%;
-                }
-
-                // h4{ width: 40%; max-width: 40%;
-                //     padding-left: ms(5);}
-           
+            h4 {
+                font-size: ms(4.5);
+                line-height: $rvr-3;
+                padding-top: $rvr-5;
             }
         }
 
-        @media (min-width: 1400px) {}
+        figure.diagram {
+            .diagram-content {
+                margin-left: ms(2);
 
-        @media (min-width: 1600px) {}
+                ol {
+                    padding-right: 0;
+                    padding-left: ms(6.75);
+                }
 
-        @media (min-width: 1900px) {}
+                li {
+                    font-size: ms(4.5);
+                }
+            }
+
+            .diagram-content > img {
+                max-width: 100%;
+                width: 100%;
+            }
+
+            .competitive-advantage__svg {
+                width: 95%;
+            }
+
+            // h4{ width: 40%; max-width: 40%;
+            //     padding-left: ms(5);}
+       
+        }
     }
 
+    @media (min-width: 1400px) {
+        h3 {
+            .br {
+                display: block;
+            }
+        }
+    }
+
+    @media (min-width: 1600px) {}
+
+    @media (min-width: 1900px) {}
+}
 
 // .business-value.my-value__container__optimize.row{
 //     &, 
@@ -370,14 +382,12 @@ $w1200: 1200px;
         h2 {
             width: 18%;
             max-width: 18%;
-
             letter-spacing: -1rem;
         }
 
         h3 {
             width: 25%;
             max-width: 25%;
-
             padding-left: 1.5rem;
             line-height: $rvr-2_25;
             font-size: ms(5);
@@ -391,7 +401,6 @@ $w1200: 1200px;
         h4 {
             width: 55%;
             max-width: 55%;
-
             padding-top: 0;
             padding-left: ms(4);
             border-top: none;
@@ -439,65 +448,49 @@ figure.diagram.diagram__end-to-end {
     }
 }
 
-#main > section > article:nth-child(2) > div > div > hgroup > h2 {
-    letter-spacing: .025rem;
-
-    @media (min-width: 786px) {
-        letter-spacing: -1rem;
-    }
-
-    @media (min-width: 992px) {
-        letter-spacing: -.85rem;
-    }
-
-    @media (min-wdith: 1200px) {
-        letter-spacing: -1rem;
-    }
-}
-
-#main > section > article:nth-child(3) > div > div > hgroup, #main > section > article:nth-child(4) > div > div > hgroup {
-    h2 {
-        letter-spacing: .025rem;
-    }
-
-    @media (min-width: 786px) {
-        h2 {
-            letter-spacing: -1.5rem;
-        }
-
-        h3 {
-            padding-left: ms(3.5);
-            letter-spacing: -.075rem;
-        }
-
-        h4 {
-            letter-spacing: .075rem;
-        }
-    }
-
-    @media (min-width: 992px) {
-        h2 {
-            letter-spacing: -.85rem;
-        }
-    }
-
-    @media (min-width: 1200px) {
-        h2 {
-            letter-spacing: -2.5rem;
-        }
-    }
-}
-
-#main > section > article:nth-child(4) > div > div > hgroup > h3 {
-    @media (min-width: 1200px) {
-        padding-right: ms(6);
-    }
-}
 
 
+// #main > section > article:nth-child(3) > div > div > hgroup, #main > section > article:nth-child(4) > div > div > hgroup {
+//     h2 {
+//         letter-spacing: .025rem;
+//     }
+
+//     @media (min-width: 768px) {
+//         h2 {
+//             letter-spacing: -1.5rem;
+//         }
+
+//         h3 {
+//             padding-left: ms(3.5);
+//             letter-spacing: -.075rem;
+//         }
+
+//         h4 {
+//             letter-spacing: .075rem;
+//         }
+//     }
+
+//     @media (min-width: 992px) {
+//         h2 {
+//             letter-spacing: -.85rem;
+//         }
+//     }
+
+//     @media (min-width: 1200px) {
+//         h2 {
+//             letter-spacing: -2.5rem;
+//         }
+//     }
+// }
+
+// #main > section > article:nth-child(4) > div > div > hgroup > h3 {
+//     @media (min-width: 1200px) {
+//         padding-right: ms(6);
+//     }
+// }
 
 // #main > section > article:nth-child(5) > div > div > hgroup{
-// @media (min-width: 786px){
+// @media (min-width: 768px){
 // h2{
 //     font-size: ms(7.9);
 // }
@@ -528,6 +521,17 @@ figure.diagram.diagram__end-to-end {
     }
 }
 
+
+.bgregister .panel-hero__img--mobile{
+   
+    @media (min-width: 768px){
+        left: 35%;// width: 100%;
+    .register-small{
+        width: 500px;
+    }    
+    }
+}
+
 .about-me .panel-hero__img--mobile {
     left: 0;
     width: 70%;
@@ -547,7 +551,6 @@ figure.diagram.diagram__end-to-end {
         overflow: hidden;
         width: 150%;
         max-width: auto;
-
         .conductor-small {
             width: 700px;
         }
@@ -694,7 +697,7 @@ figure.diagram.diagram__end-to-end {
         @include make-col(6);
 
         display: flex;
-
+        align-content: baseline;
         // margin-left: $ms-1;
         padding-left: 0px;
         padding-right: 0px;
@@ -742,7 +745,7 @@ figure.diagram.diagram__end-to-end {
 
     @include media-breakpoint-up(md) {
         @include make-col-ready;
-        @include make-col(2);
+        @include make-col(4);
 
         padding-left: 0px;
         padding-right: 0px;
@@ -807,7 +810,7 @@ figure.diagram.diagram__end-to-end {
     padding-left: $ms-1;
     padding-right: $ms-1;
     padding-top: $rvr-1;
-    padding-bottom: $rvr-_25;
+    padding-bottom: $rvr-1;
 
     @include media-breakpoint-up(md) {
         padding-top: $rvr-2_25;
@@ -820,16 +823,21 @@ figure.diagram.diagram__end-to-end {
 }
 
 .stats-caption {
+    font-size: ms(1.5);
+    max-width: ms(5);
+    line-height: $rvr-_5;
     @include media-breakpoint-up(md) {
         font-size: ms(3);
         max-width: ms(7);
+            line-height: $rvr-1_25;
+            padding-top: ms(.05);
     }
 }
 
-.home-page__my-mo__container {
-    // @extend .container;
-    @extend .panel-hero__img--background;
-}
+// .home-page__my-mo__container {
+//     // @extend .container;
+//     @extend .panel-hero__img--background;
+// }
 
 article.panel-fluid.home-page {
     .home-page__my-mo__container {
@@ -863,7 +871,7 @@ article.panel-fluid.home-page {
         h2 {
             line-height: $rvr-2_75;
             margin-bottom: $rvr-3;
-            font-size: ms(4.5);
+    
             letter-spacing: -.01rem;
         }
 
@@ -895,7 +903,7 @@ article.panel-fluid.home-page .home-page__my-mo__container {
     @media (min-width: 576px) {}
 
     @media (min-width: 768px) {
-        width: ms(11.25);
+        // width: ms(11.25);
     }
 
     @media (min-width: 992px) {
@@ -921,9 +929,8 @@ article.panel-fluid.home-page .home-page__my-mo__container {
     }
 
     h2 {
-        line-height: $rvr-2_75;
+        // line-height: $rvr-2_75;
         margin-bottom: $rvr-3;
-        font-size: ms(4.5);
         letter-spacing: -.01rem;
     }
 
@@ -1147,7 +1154,7 @@ article.panel-fluid.home-page .home-page__my-mo__container {
         margin: 0 auto $rvr-1 auto;
     }
 
-    @media (min-width: 786px) {
+    @media (min-width: 768px) {
         min-height: 320px;
 
         p {
@@ -2258,25 +2265,17 @@ article.panel-fluid.home-page .home-page__my-mo__container {
     }
 }
 
-
-
-
 .cta__container.business-value.my-value__container__cta {
-@media (min-width: 992px){
-width: calc(100%/2);
-margin-left: 25%;
+    @media (min-width: 992px) {
+        width: calc(100%/2);
+        margin-left: 25%;
+    }
+
+    @media (min-width: 1200px) {
+        width: #{$w1200 / 2};
+        margin-left: #{$w1200 * 0.25};
+    }
 }
-@media (min-width: 1200px){
-    width: #{$w1200 /2};
-    margin-left: #{$w1200*.25};
-}
-}
-
-
-
-
-
-
 
 // #backstory__content{
 //     max-height: 60vh;
